--- a/frontend/src/app/pages/theaters/list/list.component.html
+++ b/frontend/src/app/pages/theaters/list/list.component.html
@@ -12,12 +12,10 @@
         <div class="card-body">
             <table class="table">
                 <thead>
-                    <tr>
                         <tr class="col-1">ID</tr>
                         <tr class="col-2">Ubicación</tr>
                         <tr class="col-3">Capacidad</tr>
                         <tr class="col-4">Opciones</tr>
-                    </tr>
                 </thead>
                 <tbody>
                     <tr *ngfor="let actual of theaters">
@@ -31,6 +29,7 @@
                         </td>
                     </tr>
                 </tbody>
+            </table>
         </div>
       </div>
     </div>
