--- a/frontend/src/app/pages/service/list/list.component.html
+++ b/frontend/src/app/pages/service/list/list.component.html
@@ -22,9 +22,9 @@
                 <tbody>
                     <tr *ngFor="let actual of services">
                         <td>{{actual.id}}</td>
-                        <td>{{actual.nombre}}</td>
-                        <td>{{actual.descripción}}</td>
-                        <td>{{actual.costo}}</td>
+                        <td>{{actual.name}}</td>
+                        <td>{{actual.description}}</td>
+                        <td>{{actual.price}}</td>
                         <td>
                             <button type="button" class="btn btn-primary">Ver</button>
                             <button type="button" class="btn btn-primary">Editar</button>
