--- a/frontend/src/app/pages/administrator/list/list.component.html
+++ b/frontend/src/app/pages/administrator/list/list.component.html
@@ -21,7 +21,7 @@
               </tr>
             </thead>
             <tbody>
-              <tr *ngFor="let actual of theaters">
+              <tr *ngFor="let actual of administrator">
                 <td>{{ actual.id }}</td>
                 <td>{{ actual.nombres }}</td>
                 <td>{{ actual.apellidos }}</td>
