--- a/frontend/src/app/pages/driver/list/list.component.html
+++ b/frontend/src/app/pages/driver/list/list.component.html
@@ -24,7 +24,7 @@
                                 <td>
                                     <button type="button" class="btn btn-primary">Ver</button>
                                     <button type="button" class="btn btn-warning">Actualizar</button>
-                                    <button type="button" class="btn btn-danger" (click)="delete(actual.id)>Eliminar</button>
+                                    <button type="button" class="btn btn-danger" (click)="delete(actual.id)">Eliminar</button>
                                 </td>
                             </tr>
                         </tbody>
