--- a/frontend/src/app/pages/plan/list/list.component.html
+++ b/frontend/src/app/pages/plan/list/list.component.html
@@ -13,11 +13,11 @@
             <table class="table">
                 <thead>
                     <tr>
-                        <tr class="col-1">ID</tr>
-                        <tr class="col-2">Nombre</tr>
-                        <tr class="col-3">Descripción</tr>
-                        <tr class="col-4">Costo</tr>
-                        <tr class="col-5">Duración</tr>
+                        <th class="col-1">ID</th>
+                        <th class="col-2">Nombre</th>
+                        <th class="col-3">Descripción</th>
+                        <th class="col-4">Costo</th>
+                        <th class="col-5">Duración</th>
                     </tr>
                 </thead>
                 <tbody>
@@ -34,6 +34,7 @@
                         </td>
                     </tr>
                 </tbody>
+            </table>
         </div>
       </div>
     </div>
