--- a/frontend/src/app/pages/account-holder/list/list.component.html
+++ b/frontend/src/app/pages/account-holder/list/list.component.html
@@ -20,7 +20,7 @@
                             </tr>
                         </thead>
                         <tbody>
-                            <tr *ngFor="let actual of accountHolders">
+                            <tr *ngFor="let actual of accountHolder">
                                 <td>{{actual.id}}</td>
                                 <td>{{actual.name}}</td>
                                 <td>{{actual.beneficiaries}}</td>
