--- a/frontend/src/app/pages/beneficiary/list/list.component.html
+++ b/frontend/src/app/pages/beneficiary/list/list.component.html
@@ -20,7 +20,7 @@
                             </tr>
                         </thead>
                         <tbody>
-                            <tr *ngFor="let actual of beneficiaries">
+                            <tr *ngFor="let actual of beneficiary">
                                 <td>{{actual.id}}</td>
                                 <td>{{actual.name}}</td>
                                 <td>{{actual.accountHolder_id}}</td>
