--- a/frontend/src/app/pages/permission/list/list.component.html
+++ b/frontend/src/app/pages/permission/list/list.component.html
@@ -20,7 +20,7 @@
                             </tr>
                         </thead>
                         <tbody>
-                            <tr *ngFor="let actual of permissions">
+                            <tr *ngFor="let actual of permission">
                                 <td>{{actual.id}}</td>
                                 <td>{{actual.url}}</td>
                                 <td>{{actual.method}}</td>
