--- a/frontend/src/app/pages/role/list/list.component.html
+++ b/frontend/src/app/pages/role/list/list.component.html
@@ -20,7 +20,7 @@
                             </tr>
                         </thead>
                         <tbody>
-                            <tr *ngFor="let actual of roles">
+                            <tr *ngFor="let actual of role">
                                 <td>{{actual.id}}</td>
                                 <td>{{actual.name}}</td>
                                 <td>{{actual.description}}</td>
