--- a/frontend/src/app/pages/driver/list/list.component.html
+++ b/frontend/src/app/pages/driver/list/list.component.html
@@ -18,7 +18,7 @@
                             </tr>
                         </thead>
                         <tbody>
-                            <tr *ngFor="let actual of drivers">
+                            <tr *ngFor="let actual of driver">
                                 <td>{{actual.id}}</td>
                                 <td>{{actual.servicioId}}</td>
                                 <td>
