--- a/frontend/src/app/pages/user/list/list.component.html
+++ b/frontend/src/app/pages/user/list/list.component.html
@@ -23,7 +23,7 @@
                             <tr *ngFor="let actual of users">
                                 <td>{{actual.id}}</td>
                                 <td>{{actual.name}}</td>
-                                <td>{{actual.roleId}}</td>
+                                <td>{{actual.role_Id}}</td>
                                 <td>
                                     <button type="button" class="btn btn-primary">Ver</button>
                                     <button type="button" class="btn btn-warning">Actualizar</button>
