--- a/frontend/src/app/pages/message/list/list.component.html
+++ b/frontend/src/app/pages/message/list/list.component.html
@@ -1,1 +1,40 @@
-<p>list works!</p>
+<div class="header bg-gradient-danger pb-8 pt-5 pt-md-8">
+</div>
+<!-- Page content -->
+<div class="container-fluid mt--7">
+  <!-- Table -->
+  <div class="row">
+    <div class="col">
+      <div class="card shadow">
+        <div class="card-header bg-transparent">
+          <h3 class="mb-0">Icons</h3>
+        </div>
+        <div class="card-body">
+          <table class="table">
+            <thead>
+            <tr>
+              <th scope="col-1">Id</th>
+              <th scope="col-3">Informacion</th>
+              <th scope="col-4">Usuario</th>
+              <th scope="col-4">Chat</th>
+            </tr>
+            </thead>
+            <tbody>
+            <tr *ngFor="let actual of message">
+              <td>{{actual.id}}</td>
+              <td>{{actual.information}}</td>
+              <td>{{actual.user_id}}</td>
+              <td>{{actual.chat_id}}</td>
+              <td>
+                <button type="button" class="btn btn-primary">Ver</button>
+                <button type="button" class="btn btn-warning">Actualizar</button>
+                <button type="button" class="btn btn-danger" (click)="delete(actual.id)">Eliminar </button>
+              </td>
+            </tr>
+            </tbody>
+          </table>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
