--- a/frontend/src/app/pages/plan/list/list.component.html
+++ b/frontend/src/app/pages/plan/list/list.component.html
@@ -7,7 +7,15 @@
     <div class="col">
       <div class="card shadow">
         <div class="card-header bg-transparent">
-          <h3 class="mb-0">Plan</h3>
+          <div class="row">
+            <div class="col-3">
+              <h3 class="mb-0">Plan</h3>
+            </div>
+            <div class="col-6"></div>
+            <div class="col-3">
+              <button type="button" class="btn btn-success" (click)="create()">Crear</button>
+            </div>
+          </div>
         </div>
         <div class="card-body">
             <table class="table">
