--- a/frontend/src/app/pages/permission/list/list.component.html
+++ b/frontend/src/app/pages/permission/list/list.component.html
@@ -6,9 +6,17 @@
     <div class="row">
         <div class="col">
             <div class="card shadow">
-                <div class="card-header bg-transparent">
-                    <h3 class="mb-0">Icons</h3>
+              <div class="card-header bg-transparent">
+                <div class="row">
+                  <div class="col-3">
+                    <h3 class="mb-0">Permisos</h3>
+                  </div>
+                  <div class="col-6"></div>
+                  <div class="col-3">
+                    <button type="button" class="btn btn-success" (click)="create()">Crear</button>
+                  </div>
                 </div>
+              </div>
                 <div class="card-body">
                     <table class="table">
                         <thead>
