--- a/frontend/src/app/pages/beneficiary/manage/manage.component.html
+++ b/frontend/src/app/pages/beneficiary/manage/manage.component.html
@@ -7,10 +7,91 @@
     <div class="col">
       <div class="card shadow">
         <div class="card-header bg-transparent">
-          <h3 class="mb-0">Icons</h3>
+          <h3 *ngIf="mode==1" class="mb-0">Visualización</h3>
+          <h3 *ngIf="mode==2" class="mb-0">Crear</h3>
+          <h3 *ngIf="mode==3" class="mb-0">Actualizar</h3>
         </div>
         <div class="card-body">
-
+          <!-- Poner etiqueta from -->
+          <form class="form" [formGroup]="theFormGroup">
+            <div class="container">
+              <div class="row">
+                <div class="col-4">
+                  Id:
+                </div>
+                <div class="col-8">
+                  {{beneficiary.id}}
+                </div>
+              </div>
+              <div class="row">
+                <div class="col-4">
+                  Nombre:
+                </div>
+                <div class="col-8">
+                  <input type="text" class="from-control" [(ngModel)]="beneficiary.name"
+                         [disabled]="mode==1" formController="name">
+                  <div
+                    *ngIf="getTheFormGroup.location.errors && (getTheFormGroup.location.dirty || getTheFormGroup.location.touched)">
+                    <strong *ngIf="getTheFormGroup.location.errors.required"
+                            class="msnError">Requerido</strong>
+                    <strong *ngIf="getTheFormGroup.location.errors.minlength"
+                            class="msnError">Invalido</strong>
+                  </div>
+                </div>
+              </div>
+              <div class="row">
+                <div class="col-4">
+                  email:
+                </div>
+                <div class="col-8">
+                  <input type="text" class="from-control" [(ngModel)]="beneficiary.email"
+                         [disabled]="mode==1" formController="email">
+                  <div
+                    *ngIf="getTheFormGroup.location.errors && (getTheFormGroup.location.dirty || getTheFormGroup.location.touched || trySend)">
+                    <strong *ngIf="getTheFormGroup.location.errors.required" class="msnError">Requerido</strong>
+                    <strong *ngIf="getTheFormGroup.location.errors.minlength" class="msnError">Requerido</strong>
+                  </div>
+                </div>
+              </div>
+              <div class="row">
+                <div class="col-4">
+                  Contraseña:
+                </div>
+                <div class="col-8">
+                  <input type="text" class="from-control" [(ngModel)]="beneficiary.password"
+                         [disabled]="mode==1" formController="password">
+                  <div
+                    *ngIf="getTheFormGroup.location.errors && (getTheFormGroup.location.dirty || getTheFormGroup.location.touched || trySend)">
+                    <strong *ngIf="getTheFormGroup.location.errors.required" class="msnError">Requerido</strong>
+                    <strong *ngIf="getTheFormGroup.location.errors.minlength" class="msnError">Requerido</strong>
+                  </div>
+                </div>
+              </div>
+              <div class="row">
+                <div class="col-4">
+                  Titular:
+                </div>
+                <div class="col-8">
+                  <input type="text" class="from-control" [(ngModel)]="beneficiary.headLine_id"
+                         [disabled]="mode==1" formController="headLine">
+                  <div
+                    *ngIf="getTheFormGroup.location.errors && (getTheFormGroup.location.dirty || getTheFormGroup.location.touched || trySend)">
+                    <strong *ngIf="getTheFormGroup.location.errors.required" class="msnError">Requerido</strong>
+                    <strong *ngIf="getTheFormGroup.location.errors.minlength" class="msnError">Requerido</strong>
+                  </div>
+                </div>
+              </div>
+              <div class="row">
+                <div class="col-4"></div>
+                <div class="col-8">
+                  <button *ngIf="mode==2" class="btn btn-primary btn-block"
+                          (click)="create()">Crear</button>
+                  <button *ngIf="mode==3" class="btn btn-primary btn-block"
+                          (click)="update()">Actualizar</button>
+                </div>
+              </div>
+            </div>
+          </form>
         </div>
       </div>
     </div>
