--- a/frontend/src/app/pages/administrator/manage/manage.component.html
+++ b/frontend/src/app/pages/administrator/manage/manage.component.html
@@ -7,12 +7,31 @@
     <div class="col">
       <div class="card shadow">
         <div class="card-header bg-transparent">
+          <h3 class="mb-0">Icons</h3>
+        </div>
+        <div class="card-body">
+
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+
+
+<!-- <div class="header bg-gradient-danger pb-8 pt-5 pt-md-8">
+</div>
+<div class="container-fluid mt--7">
+
+  <div class="row">
+    <div class="col">
+      <div class="card shadow">
+        <div class="card-header bg-transparent">
           <h3 *ngIf="mode==1" class="mb-0">Visualización</h3>
           <h3 *ngIf="mode==2" class="mb-0">Crear</h3>
           <h3 *ngIf="mode==3" class="mb-0">Actualizar</h3>
         </div>
         <div class="card-body">
-          <!-- Poner etiqueta from -->
+
           <form class="form" [formGroup]="theFormGroup">
             <div class="container">
               <div class="row">
@@ -111,3 +130,4 @@
     </div>
   </div>
 </div>
+-->
