--- a/frontend/src/app/pages/customer/manage/manage.component.html
+++ b/frontend/src/app/pages/customer/manage/manage.component.html
@@ -1,5 +1,4 @@
-<div class="header bg-gradient-danger pb-8 pt-5 pt-md-8">
-</div>
+<div class="header bg-gradient-danger pb-8 pt-5 pt-md-8"></div>
 <!-- Page content -->
 <div class="container-fluid mt--7">
   <!-- Table -->
@@ -7,10 +6,82 @@
     <div class="col">
       <div class="card shadow">
         <div class="card-header bg-transparent">
-          <h3 class="mb-0">Icons</h3>
+          <h3 *ngIf="mode == 1" class="mb-0">Visualizar</h3>
+          <h3 *ngIf="mode == 2" class="mb-0">Crear</h3>
+          <h3 *ngIf="mode == 3" class="mb-0">Actualizar</h3>
         </div>
         <div class="card-body">
+          <div class="container d-grid gap-3">
+            <div class="row mb-2">
+              <div class="col-4">Id:</div>
+              <div class="col-8">
+                {{ customer.id }}
+              </div>
+            </div>
+            <div class="row mb-1" *ngIf="mode == 1">
+              <div class="col-4">User id</div>
+              <div class="col-8">
+                {{ customer.user_id }}
+              </div>
+            </div>
+            <div class="row mb-1">
+              <div class="col-4">Nombre:</div>
+              <div class="col-8">
+                <input type="text" class="form-control" [(ngModel)]="customer.name" [disabled]="mode == 1" />
+              </div>
+            </div>
 
+            <div class="row mb-1">
+              <div class="col-4">Email:</div>
+              <div class="col-8">
+                <input type="email" class="form-control" [(ngModel)]="customer.email" [disabled]="mode == 1" />
+              </div>
+            </div>
+            <div class="row mb-1">
+              <div class="col-4">Document:</div>
+              <div class="col-8">
+                <input type="text" class="form-control" [(ngModel)]="customer.document" [disabled]="mode == 1" />
+              </div>
+            </div>
+
+            <div class="row mb-1">
+              <div class="col-4">Celular:</div>
+              <div class="col-8">
+                <input type="text" class="form-control" [(ngModel)]="customer.phone" [disabled]="mode == 1" />
+              </div>
+            </div>
+
+            <div class="row mb-1">
+              <div class="col-4">Genero:</div>
+              <div class="col-8">
+                <input type="text" class="form-control" [(ngModel)]="customer.gender" [disabled]="mode == 1" />
+              </div>
+            </div>
+
+            <div class="row mb-1">
+              <div class="col-4"></div>
+              <div class="col-8">
+                <div class="d-flex align-items-center justify-content-center">
+                  <button *ngIf="mode == 2" class="btn btn-primary btn-block" (click)="create()">
+                    Crear
+                  </button>
+                  <button *ngIf="mode == 3" class="btn btn-primary btn-block" (click)="update()">
+                    Actualizar
+                  </button>
+                </div>
+              </div>
+            </div>
+            <div *ngIf="mode == 1" class="mt-2">
+              <div class="d-flex align-items-center justify-content-center">
+                <button type="button" class="btn btn-info" (click)="subscriptions()">
+                  Suscripciones
+                </button>
+                <button type="button" class="btn btn-info" (click)="serviceexecutions()">
+                  Servicios en ejecución
+                </button>
+              </div>
+            </div>
+          </div>
         </div>
       </div>
     </div>
