--- a/frontend/src/app/pages/head-line/list/list.component.html
+++ b/frontend/src/app/pages/head-line/list/list.component.html
@@ -28,7 +28,7 @@
                             </tr>
                         </thead>
                         <tbody>
-                            <tr *ngFor="let actual of accountHolder">
+                            <tr *ngFor="let actual of headlines">
                                 <td>{{actual.id}}</td>
                                 <td>{{actual.name}}</td>
                                 <td>{{actual.beneficiaries}}</td>
