Refactorización de los models

--- a/frontend/src/app/pages/chat/list/list.component.html
+++ b/frontend/src/app/pages/chat/list/list.component.html
@@ -24,15 +24,15 @@
             <thead>
             <tr>
               <th class="col-1">Id</th>
-              <th class="col-3">Servicio ejecutado id</th>
-              <th class="col-3">Estado</th>
-              <th class="col-5">Opciones</th>
+              <th class="col-2">Estado</th>
+              <th class="col-4">Servicio ejecutado id</th>
             </tr>
             </thead>
             <tbody>
             <tr *ngFor="let chat of chats">
               <td>{{ chat.id }}</td>
-              <td>{{ chat.service_execution_id }}</td>
+              <td>{{ chat.status }}</td>
+              <td>{{ chat.service_execution.id }}</td>
               <td>
                 <span *ngIf="chat.status" class="text-success">✔</span>
                 <span *ngIf="!chat.status" class="text-danger">✖</span>
