--- a/frontend/src/app/pages/comment/list/list.component.html
+++ b/frontend/src/app/pages/comment/list/list.component.html
@@ -24,9 +24,10 @@
             <thead>
             <tr>
               <th class="col-1">Id</th>
-              <th class="col-3">Calificacion</th>
-              <th class="col-3">Comentario</th>
-              <th class="col-5">Opciones</th>
+              <th class="col-2">Usuario</th>
+              <th class="col-3">rating</th>
+              <th class="col-4">Comentario</th>
+              <th class="col-5">Servicio ejecutado</th>
             </tr>
             </thead>
             <tbody>
