--- a/frontend/src/app/pages/administrator/list/list.component.html
+++ b/frontend/src/app/pages/administrator/list/list.component.html
@@ -17,23 +17,27 @@
             </div>
           </div>
         </div>
+        import { HttpClient } from '@angular/common/http';
+        import { Observable } from 'rxjs';
         <div class="card-body">
           <table class="table">
             <thead>
               <tr>
-                <th>ID</th>
-                <th>Nombres</th>
-                <th>Apellidos</th>
-                <th>Celular</th>
-                <th>Acciones</th>
+                <th class="col-1">ID</th>
+                <th class="col-2">Nombre</th>
+                <th class="col-3">Correo</th>
+                <th class="col-4">Responsabilidad</th>
+                <th class="col-5">Salario</th>
+                <th class="col-6">Opciones</th>
               </tr>
             </thead>
             <tbody>
               <tr *ngFor="let actual of administrator">
                 <td>{{ actual.id }}</td>
-                <td>{{ actual.nombres }}</td>
-                <td>{{ actual.apellidos }}</td>
-                <td>{{ actual.celular }}</td>
+                <td>{{ actual.name }}</td>
+                <td>{{ actual.email }}</td>
+                <td>{{ actual.responsibility }}</td>
+                <td>{{ actual.salary }}</td>
                 <td>
                   <button type="button" class="btn btn-primary">Ver</button>
                   <button type="button" class="btn btn-primary">Editar</button>
