inicio de implementacion de los pages con los atrivutos corregidos

--- a/frontend/src/app/pages/chat/list/list.component.html
+++ b/frontend/src/app/pages/chat/list/list.component.html
@@ -25,7 +25,8 @@
             <tr>
               <th class="col-1">Id</th>
               <th class="col-2">Estado</th>
-              <th class="col-4">Servicio ejecutado id</th>
+              <th class="col-3">Servicio ejecutado id</th>
+              <th class="col-4">Opciones</th>
             </tr>
             </thead>
             <tbody>
