--- a/frontend/src/app/pages/beneficiary/list/list.component.html
+++ b/frontend/src/app/pages/beneficiary/list/list.component.html
@@ -26,9 +26,10 @@
             <thead>
             <tr>
               <th class="col-1">ID</th>
-              <th class="col-3">Titular</th>
+              <th class="col-2">Titular</th>
               <th class="col-3">Nombre</th>
-              <th class="col-3">edad</th>
+              <th class="col-4">edad</th>
+              <th class="col-5">Opciones</th>
             </tr>
             </thead>
             <tbody>
