Implementación de los pages y los services con los atributos correctos

--- a/frontend/src/app/pages/beneficiary/list/list.component.html
+++ b/frontend/src/app/pages/beneficiary/list/list.component.html
@@ -36,7 +36,7 @@
             <tr *ngFor="let ben of beneficiaries">
               <td>{{ ben.id }}</td>
               <td>{{ ben.owner.id }}</td>
-              <td>{{ ben.customer.name }}</td>
+              <td>{{ ben.customer.id }}</td>
               <td>{{ ben.age }}</td>
               <td>
                 <button
