--- a/frontend/src/app/pages/plan/list/list.component.html
+++ b/frontend/src/app/pages/plan/list/list.component.html
@@ -24,8 +24,8 @@
                         <th class="col-1">ID</th>
                         <th class="col-2">Nombre</th>
                         <th class="col-3">Descripción</th>
-                        <th class="col-4">Costo</th>
-                        <th class="col-5">Duración</th>
+                        <th class="col-4">Tipo plan</th>
+                        <th class="col-5">Opcioness</th>
                     </tr>
                 </thead>
                 <tbody>
@@ -33,8 +33,7 @@
                         <td>{{actual.id}}</td>
                         <td>{{actual.name}}</td>
                         <td>{{actual.description}}</td>
-                        <td>{{actual.price}}</td>
-                        <td>{{actual.duration}}</td>
+                        <td>{{actual.type_plan}}</td>
                         <td>
                             <button type="button" class="btn btn-primary">Ver</button>
                             <button type="button" class="btn btn-primary">Editar</button>
