--- a/frontend/src/app/pages/relocation/list/list.component.html
+++ b/frontend/src/app/pages/relocation/list/list.component.html
@@ -30,7 +30,7 @@
             </tr>
             </thead>
             <tbody>
-            <tr *ngFor="let actual of transfer">
+            <tr *ngFor="let actual of relocation">
               <td>{{actual.id}}</td>
               <td>{{actual.idTraslate}}</td>
               <td>{{actual.origin}}</td>
