--- a/frontend/src/app/pages/role/list/list.component.html
+++ b/frontend/src/app/pages/role/list/list.component.html
@@ -24,7 +24,7 @@
                                 <th scope="col-1">Id</th>
                                 <th scope="col-3">Name</th>
                                 <th scope="col-4">Description</th>
-                                <th scope="col-4">Options</th>
+                                <th scope="col-4">Opciones</th>
                             </tr>
                         </thead>
                         <tbody>
