--- a/frontend/src/app/pages/driver/list/list.component.html
+++ b/frontend/src/app/pages/driver/list/list.component.html
@@ -22,13 +22,20 @@
                         <thead>
                             <tr>
                                 <th scope="col-1">Id</th>
-                                <th scope="col-3">Servicio</th>
+                                <th scope="col-2">Nombre</th>
+                                <th scope="col-2">Correo</th>
+                                <th scope="col-2">Documento</th>
+                                <th scope="col-3">Telefono</th>
+                                <th scope="col-2">Opciones</th>
                             </tr>
                         </thead>
                         <tbody>
                             <tr *ngFor="let actual of driver">
                                 <td>{{actual.id}}</td>
-                                <td>{{actual.servicioId}}</td>
+                                <td>{{actual.name}}</td>
+                                <td>{{actual.email}}</td>
+                                <td>{{actual.document}}</td>
+                                <td>{{actual.phone}}</td>
                                 <td>
                                     <button type="button" class="btn btn-primary">Ver</button>
                                     <button type="button" class="btn btn-warning">Actualizar</button>
