--- a/frontend/src/app/pages/owners/list/list.component.html
+++ b/frontend/src/app/pages/owners/list/list.component.html
@@ -22,16 +22,17 @@
                         <thead>
                             <tr>
                                 <th scope="col-1">Id</th>
-                                <th scope="col-3">Name</th>
-                                <th scope="col-4">email</th>
-                                <th scope="col-4">beneficiaries</th>
+                                <th scope="col-3">Cliente</th>
+                                <th scope="col-4">Inicio</th>
+                                <th scope="col-4">Final</th>
                             </tr>
                         </thead>
                         <tbody>
-                            <tr *ngFor="let actual of headlines">
+                            <tr *ngFor="let actual of Owners">
                                 <td>{{actual.id}}</td>
-                                <td>{{actual.name}}</td>
-                                <td>{{actual.beneficiaries}}</td>
+                                <td>{{actual.customer_id}}</td>
+                                <td>{{actual.start_date}}</td>
+                                <td>{{actual.end_date}}</td>
                                 <td>
                                     <button type="button" class="btn btn-primary">Ver</button>
                                     <button type="button" class="btn btn-warning">Actualizar</button>
