--- a/frontend/src/app/pages/owners/manage/manage.component.html
+++ b/frontend/src/app/pages/owners/manage/manage.component.html
@@ -15,84 +15,58 @@
             <div class="row">
               <div class="col-4">Id:</div>
               <div class="col-8">
-                {{ headline.id }}
+                {{ owner.id }}
               </div>
             </div>
             <div class="row">
-              <div class="col-4">Nombre:</div>
+              <div class="col-4">Id del Cliente:</div>
               <div class="col-8">
                 <input
-                  type="text"
+                  type="number"
                   class="form-control"
-                  [(ngModel)]="headline.name"
+                  [(ngModel)]="owner.customer_id"
                   [disabled]="mode == 1"
                 />
               </div>
             </div>
-
-            <div class="row">
-              <div class="col-4">Email:</div>
-              <div class="col-8">
-                <input
-                  type="email"
-                  class="form-control"
-                  [(ngModel)]="headline.email"
-                  [disabled]="mode == 1"
-                />
-              </div>
-            </div>
-            <div class="row">
-              <div class="col-4">Document:</div>
-              <div class="col-8">
-                <input
-                  type="text"
-                  class="form-control"
-                  [(ngModel)]="headline.document"
-                  [disabled]="mode == 1"
-                />
-              </div>
-            </div>
-
             <div class="row">
               <div class="col-4">Fecha de inicio:</div>
               <div class="col-8">
                 <input
                   type="datetime-local"
                   class="form-control"
-                  [(ngModel)]="headline.start_date"
+                  [(ngModel)]="owner.start_date"
                   [disabled]="mode == 1"
                 />
               </div>
             </div>
-
             <div class="row">
               <div class="col-4">Fecha final:</div>
               <div class="col-8">
                 <input
                   type="datetime-local"
                   class="form-control"
-                  [(ngModel)]="headline.end_date"
+                  [(ngModel)]="owner.end_date"
                   [disabled]="mode == 1"
                 />
               </div>
             </div>
-
             <div class="row">
               <div class="col-4"></div>
               <div class="col-8">
                 <button
                   *ngIf="mode == 2"
                   class="btn btn-primary btn-block"
-                  (click)="update()"
+                  (click)="create()"
                 >
-                  Actualizar
+                  Crear
                 </button>
                 <button
                   *ngIf="mode == 3"
                   class="btn btn-primary btn-block"
-                  (click)="create()"
+                  (click)="update()"
                 >
-                  Crear
+                  Actualizar
                 </button>
               </div>
             </div>
@@ -100,7 +74,7 @@
               <button
                 type="button"
                 class="btn btn-info"
-                (click)="beneciaries()"
+                (click)="beneficiaries()"
               >
                 Beneficiarios
               </button>
@@ -111,3 +85,4 @@
     </div>
   </div>
 </div>
+
