--- a/frontend/src/app/pages/service/list/list.component.html
+++ b/frontend/src/app/pages/service/list/list.component.html
@@ -22,17 +22,14 @@
                 <thead>
                     <tr>
                         <th class="col-1">ID</th>
-                        <th class="col-2">Nombre</th>
-                        <th class="col-3">Descripción</th>
-                        <th class="col-4">Costo</th>
+                        <th class="col-2">Nombre Servicio</th>
+                        <th class="col-3">Opciones</th>
                     </tr>
                 </thead>
                 <tbody>
                     <tr *ngFor="let actual of services">
                         <td>{{actual.id}}</td>
-                        <td>{{actual.name}}</td>
-                        <td>{{actual.description}}</td>
-                        <td>{{actual.price}}</td>
+                        <td>{{actual.name_service}}</td>
                         <td>
                             <button type="button" class="btn btn-primary">Ver</button>
                             <button type="button" class="btn btn-primary">Editar</button>
