--- a/frontend/src/app/pages/administrator/list/list.component.html
+++ b/frontend/src/app/pages/administrator/list/list.component.html
@@ -13,7 +13,7 @@
             </div>
             <div class="col-6"></div>
             <div class="col-3">
-              <button type="button" class="btn btn-success" (click)="list()">Crear</button>
+              <button type="button" class="btn btn-success" (click)="create()">Crear</button>
             </div>
           </div>
         </div>
@@ -37,8 +37,8 @@
                 <td>{{ actual.responsibility }}</td>
                 <td>{{ actual.salary }}</td>
                 <td>
-                  <button type="button" class="btn btn-primary">Ver</button>
-                  <button type="button" class="btn btn-primary">Editar</button>
+                  <button type="button" class="btn btn-primary" (click)="view(actual.id)">Ver</button>
+                  <button type="button" class="btn btn-primary" (click)="update(actual.id)">Editar</button>
                   <button type="button" class="btn btn-danger" (click)="delete(actual.id)">Eliminar</button>
                 </td>
               </tr>
