--- a/frontend/src/app/pages/head-quarter/list/list.component.html
+++ b/frontend/src/app/pages/head-quarter/list/list.component.html
@@ -13,37 +13,37 @@
             </div>
             <div class="col-6"></div>
             <div class="col-3">
-              <button type="button" class="btn btn-success" (click)="list()">Crear</button>
+              <button type="button" class="btn btn-success" (click)="create()">Crear</button>
             </div>
           </div>
         </div>
         <div class="card-body">
           <table class="table">
             <thead>
-            <tr>
-              <th scope="col-1">Id</th>
-              <th scope="col-3">Nombre</th>
-              <th scope="col-4">Dirección</th>
-              <th scope="col-5">Correo</th>
-              <th scope="col-6">Ciudad</th>
-              <th scope="col-7">Telefono</th>
-              <th scope="col-8">Opciones</th>
-            </tr>
+              <tr>
+                <th scope="col-1">Id</th>
+                <th scope="col-3">Nombre</th>
+                <th scope="col-4">Dirección</th>
+                <th scope="col-5">Correo</th>
+                <th scope="col-6">Ciudad</th>
+                <th scope="col-7">Telefono</th>
+                <th scope="col-8">Opciones</th>
+              </tr>
             </thead>
             <tbody>
-            <tr *ngFor="let actual of campus">
-              <td>{{actual.id}}</td>
-              <td>{{actual.name}}</td>
-              <td>{{actual.adress}}</td>
-              <td>{{actual.email}}</td>
-              <td>{{actual.city}}</td>
-              <td>{{actual.phone}}</td>
-              <td>
-                <button type="button" class="btn btn-primary">Ver</button>
-                <button type="button" class="btn btn-warning">Actualizar</button>
-                <button type="button" class="btn btn-danger" (click)="delete(actual.id)">Eliminar </button>
-              </td>
-            </tr>
+              <tr *ngFor="let actual of campus">
+                <td>{{actual.id}}</td>
+                <td>{{actual.name}}</td>
+                <td>{{actual.adress}}</td>
+                <td>{{actual.email}}</td>
+                <td>{{actual.city}}</td>
+                <td>{{actual.phone}}</td>
+                <td>
+                  <button type="button" class="btn btn-primary" (click)="view(actual.id)">Ver</button>
+                  <button type="button" class="btn btn-warning" (click)="update(actual.id)">Actualizar</button>
+                  <button type="button" class="btn btn-danger" (click)="delete(actual.id)">Eliminar </button>
+                </td>
+              </tr>
             </tbody>
           </table>
         </div>
