--- a/frontend/src/app/pages/message/list/list.component.html
+++ b/frontend/src/app/pages/message/list/list.component.html
@@ -13,35 +13,35 @@
             </div>
             <div class="col-6"></div>
             <div class="col-3">
-              <button type="button" class="btn btn-success" (click)="list()">Crear</button>
+              <button type="button" class="btn btn-success" (click)="create()">Crear</button>
             </div>
           </div>
         </div>
         <div class="card-body">
           <table class="table">
             <thead>
-            <tr>
-              <th scope="col-1">Id</th>
-              <th scope="col-3">Remitente</th>
-              <th scope="col-4">Contenido</th>
-              <th scope="col-4">Usuario</th>
-              <th scope="col-5">Chat</th>
-              <th scope="col-6">Opciones</th>
-            </tr>
+              <tr>
+                <th scope="col-1">Id</th>
+                <th scope="col-3">Remitente</th>
+                <th scope="col-4">Contenido</th>
+                <th scope="col-4">Usuario</th>
+                <th scope="col-5">Chat</th>
+                <th scope="col-6">Opciones</th>
+              </tr>
             </thead>
             <tbody>
-            <tr *ngFor="let actual of message">
-              <td>{{actual.id}}</td>
-              <td>{{actual.sender}}</td>
-              <td>{{actual.content}}</td>
-              <td>{{actual.user_id}}</td>
-              <td>{{actual.chat_id}}</td>
-              <td>
-                <button type="button" class="btn btn-primary">Ver</button>
-                <button type="button" class="btn btn-warning">Actualizar</button>
-                <button type="button" class="btn btn-danger" (click)="delete(actual.id)">Eliminar </button>
-              </td>
-            </tr>
+              <tr *ngFor="let actual of message">
+                <td>{{actual.id}}</td>
+                <td>{{actual.sender}}</td>
+                <td>{{actual.content}}</td>
+                <td>{{actual.user_id}}</td>
+                <td>{{actual.chat_id}}</td>
+                <td>
+                  <button type="button" class="btn btn-primary" (click)="view(actual.id)">Ver</button>
+                  <button type="button" class="btn btn-warning" (click)="update(actual.id)">Actualizar</button>
+                  <button type="button" class="btn btn-danger" (click)="delete(actual.id)">Eliminar </button>
+                </td>
+              </tr>
             </tbody>
           </table>
         </div>
