--- a/frontend/src/app/pages/owners/list/list.component.html
+++ b/frontend/src/app/pages/owners/list/list.component.html
@@ -6,17 +6,17 @@
     <div class="row">
         <div class="col">
             <div class="card shadow">
-              <div class="card-header bg-transparent">
-                <div class="row">
-                  <div class="col-3">
-                    <h3 class="mb-0">Titular</h3>
-                  </div>
-                  <div class="col-6"></div>
-                  <div class="col-3">
-                    <button type="button" class="btn btn-success" (click)="list()">Crear</button>
-                  </div>
+                <div class="card-header bg-transparent">
+                    <div class="row">
+                        <div class="col-3">
+                            <h3 class="mb-0">Titular</h3>
+                        </div>
+                        <div class="col-6"></div>
+                        <div class="col-3">
+                            <button type="button" class="btn btn-success" (click)="create()">Crear</button>
+                        </div>
+                    </div>
                 </div>
-              </div>
                 <div class="card-body">
                     <table class="table">
                         <thead>
@@ -34,9 +34,11 @@
                                 <td>{{actual.start_date}}</td>
                                 <td>{{actual.end_date}}</td>
                                 <td>
-                                    <button type="button" class="btn btn-primary">Ver</button>
-                                    <button type="button" class="btn btn-warning">Actualizar</button>
-                                    <button type="button" class="btn btn-danger" (click)="delete(actual.id)">Eliminar </button>
+                                    <button type="button" class="btn btn-primary" (click)="view(actual.id)">Ver</button>
+                                    <button type="button" class="btn btn-warning"
+                                        (click)="update(actual.id)">Actualizar</button>
+                                    <button type="button" class="btn btn-danger" (click)="delete(actual.id)">Eliminar
+                                    </button>
                                 </td>
                             </tr>
                         </tbody>
