--- a/frontend/src/app/pages/plan/list/list.component.html
+++ b/frontend/src/app/pages/plan/list/list.component.html
@@ -13,35 +13,35 @@
             </div>
             <div class="col-6"></div>
             <div class="col-3">
-              <button type="button" class="btn btn-success" (click)="list()">Crear</button>
+              <button type="button" class="btn btn-success" (click)="create">Crear</button>
             </div>
           </div>
         </div>
         <div class="card-body">
-            <table class="table">
-                <thead>
-                    <tr>
-                        <th class="col-1">ID</th>
-                        <th class="col-2">Nombre</th>
-                        <th class="col-3">Descripción</th>
-                        <th class="col-4">Tipo plan</th>
-                        <th class="col-5">Opcioness</th>
-                    </tr>
-                </thead>
-                <tbody>
-                    <tr *ngfor="let actual of plan">
-                        <td>{{actual.id}}</td>
-                        <td>{{actual.name}}</td>
-                        <td>{{actual.description}}</td>
-                        <td>{{actual.type_plan}}</td>
-                        <td>
-                            <button type="button" class="btn btn-primary">Ver</button>
-                            <button type="button" class="btn btn-primary">Editar</button>
-                            <button type="button" class="btn btn-danger" (click)="delete(actual.id)">Eliminar</button>
-                        </td>
-                    </tr>
-                </tbody>
-            </table>
+          <table class="table">
+            <thead>
+              <tr>
+                <th class="col-1">ID</th>
+                <th class="col-2">Nombre</th>
+                <th class="col-3">Descripción</th>
+                <th class="col-4">Tipo plan</th>
+                <th class="col-5">Opcioness</th>
+              </tr>
+            </thead>
+            <tbody>
+              <tr *ngfor="let actual of plan">
+                <td>{{actual.id}}</td>
+                <td>{{actual.name}}</td>
+                <td>{{actual.description}}</td>
+                <td>{{actual.type_plan}}</td>
+                <td>
+                  <button type="button" class="btn btn-primary" (click)="view(actual.id)">Ver</button>
+                  <button type="button" class="btn btn-primary" (click)="update(actual.id)">Editar</button>
+                  <button type="button" class="btn btn-danger" (click)="delete(actual.id)">Eliminar</button>
+                </td>
+              </tr>
+            </tbody>
+          </table>
         </div>
       </div>
     </div>
