--- a/frontend/src/app/pages/room/list/list.component.html
+++ b/frontend/src/app/pages/room/list/list.component.html
@@ -13,38 +13,38 @@
             </div>
             <div class="col-6"></div>
             <div class="col-3">
-              <button type="button" class="btn btn-success" (click)="list()">Crear</button>
+              <button type="button" class="btn btn-success" (click)="create()">Crear</button>
             </div>
           </div>
         </div>
         <div class="card-body">
           <table class="table">
             <thead>
-            <tr>
-              <th scope="col-1">Id</th>
-              <th scope="col-2">Nombre</th>
-              <th scope="col-3">Capacidad</th>
-              <th scope="col-4">Instalaciones</th>
-              <th scope="col-5">Disponible</th>
-              <th scope="col-6">Sede</th>
-              <th scope="col-7">Opciones</th>
+              <tr>
+                <th scope="col-1">Id</th>
+                <th scope="col-2">Nombre</th>
+                <th scope="col-3">Capacidad</th>
+                <th scope="col-4">Instalaciones</th>
+                <th scope="col-5">Disponible</th>
+                <th scope="col-6">Sede</th>
+                <th scope="col-7">Opciones</th>
 
 
-            </tr>
+              </tr>
             </thead>
             <tbody>
-            <tr *ngFor="let actual of hall">
-              <td>{{actual.id}}</td>
-              <td>{{actual.room_name}}</td>
-              <td>{{actual.room_capacity}}</td>
-              <td>{{actual.facilities}}</td>
-              <td>{{actual.headquearter_id}}</td>
-              <td>
-                <button type="button" class="btn btn-primary">Ver</button>
-                <button type="button" class="btn btn-warning">Actualizar</button>
-                <button type="button" class="btn btn-danger" (click)="delete(actual.id)">Eliminar </button>
-              </td>
-            </tr>
+              <tr *ngFor="let actual of hall">
+                <td>{{actual.id}}</td>
+                <td>{{actual.room_name}}</td>
+                <td>{{actual.room_capacity}}</td>
+                <td>{{actual.facilities}}</td>
+                <td>{{actual.headquearter_id}}</td>
+                <td>
+                  <button type="button" class="btn btn-primary" (click)="view(actual.id)">Ver</button>
+                  <button type="button" class="btn btn-warning" (click)="update(actual.id)">Actualizar</button>
+                  <button type="button" class="btn btn-danger" (click)="delete(actual.id)">Eliminar </button>
+                </td>
+              </tr>
             </tbody>
           </table>
         </div>
