--- a/frontend/src/app/pages/sepulture/list/list.component.html
+++ b/frontend/src/app/pages/sepulture/list/list.component.html
@@ -13,46 +13,46 @@
             </div>
             <div class="col-6"></div>
             <div class="col-3">
-              <button type="button" class="btn btn-success" (click)="list()">Crear</button>
+              <button type="button" class="btn btn-success" (click)="create()">Crear</button>
             </div>
           </div>
         </div>
         <div class="card-body">
-            <table class="table">
-                <thead>
-                    <tr>
-                        <th class="col-1">ID</th>
-                        <th class="col-2">Nombre</th>
-                        <th class="col-3">Descripción</th>
-                        <th class="col-4">Cementerio</th>
-                        <th class="col-5">Tipo</th>
-                        <th class="col-6">Precio</th>
-                        <th class="col-7">Ocupada</th>
-                        <th class="col-8">Servicio id</th>
-                        <th class="col-9">Sala id</th>
-                        <th class="col-10">Opcioness</th>
-                    </tr>
-                </thead>
-                <tbody>
-                    <tr *ngfor="let actual of sepulture">
-                        <td>{{actual.id}}</td>
-                        <td>{{actual.sepulture_name}}</td>
-                        <td>{{actual.description}}</td>
-                        <td>{{actual.cemetery_name}}</td>
-                        <td>{{actual.sepulture_type}}</td>
-                        <td>{{actual.price}}</td>
-                        <td>{{actual.is_available}}</td>
-                        <td>{{actual.service_id}}</td>
-                        <td>{{actual.room_id}}</td>
+          <table class="table">
+            <thead>
+              <tr>
+                <th class="col-1">ID</th>
+                <th class="col-2">Nombre</th>
+                <th class="col-3">Descripción</th>
+                <th class="col-4">Cementerio</th>
+                <th class="col-5">Tipo</th>
+                <th class="col-6">Precio</th>
+                <th class="col-7">Ocupada</th>
+                <th class="col-8">Servicio id</th>
+                <th class="col-9">Sala id</th>
+                <th class="col-10">Opcioness</th>
+              </tr>
+            </thead>
+            <tbody>
+              <tr *ngfor="let actual of sepulture">
+                <td>{{actual.id}}</td>
+                <td>{{actual.sepulture_name}}</td>
+                <td>{{actual.description}}</td>
+                <td>{{actual.cemetery_name}}</td>
+                <td>{{actual.sepulture_type}}</td>
+                <td>{{actual.price}}</td>
+                <td>{{actual.is_available}}</td>
+                <td>{{actual.service_id}}</td>
+                <td>{{actual.room_id}}</td>
 
-                        <td>
-                            <button type="button" class="btn btn-primary">Ver</button>
-                            <button type="button" class="btn btn-primary">Editar</button>
-                            <button type="button" class="btn btn-danger" (click)="delete(actual.id)">Eliminar</button>
-                        </td>
-                    </tr>
-                </tbody>
-            </table>
+                <td>
+                  <button type="button" class="btn btn-primary" (click)="view(actual.id)">Ver</button>
+                  <button type="button" class="btn btn-primary" (click)="update(actual.id)">Editar</button>
+                  <button type="button" class="btn btn-danger" (click)="delete(actual.id)">Eliminar</button>
+                </td>
+              </tr>
+            </tbody>
+          </table>
         </div>
       </div>
     </div>
