--- a/frontend/src/app/pages/service/list/list.component.html
+++ b/frontend/src/app/pages/service/list/list.component.html
@@ -13,34 +13,33 @@
             </div>
             <div class="col-6"></div>
             <div class="col-3">
-              <button type="button" class="btn btn-success" (click)="list()">Crear</button>
+              <button type="button" class="btn btn-success" (click)="create()">Crear</button>
             </div>
           </div>
         </div>
         <div class="card-body">
-            <table class="table">
-                <thead>
-                    <tr>
-                        <th class="col-1">ID</th>
-                        <th class="col-2">Nombre Servicio</th>
-                        <th class="col-3">Opciones</th>
-                    </tr>
-                </thead>
-                <tbody>
-                    <tr *ngFor="let actual of services">
-                        <td>{{actual.id}}</td>
-                        <td>{{actual.name_service}}</td>
-                        <td>
-                            <button type="button" class="btn btn-primary">Ver</button>
-                            <button type="button" class="btn btn-primary">Editar</button>
-                            <button type="button" class="btn btn-danger" (click)="delete(actual.idServicio)">Eliminar</button>
-                        </td>
-                    </tr>
-                </tbody>
-            </table>
+          <table class="table">
+            <thead>
+              <tr>
+                <th class="col-1">ID</th>
+                <th class="col-2">Nombre Servicio</th>
+                <th class="col-3">Opciones</th>
+              </tr>
+            </thead>
+            <tbody>
+              <tr *ngFor="let actual of services">
+                <td>{{actual.id}}</td>
+                <td>{{actual.name_service}}</td>
+                <td>
+                  <button type="button" class="btn btn-primary" (click)="view(actual.id)">Ver</button>
+                  <button type="button" class="btn btn-primary" (click)="update(actual.id)">Editar</button>
+                  <button type="button" class="btn btn-danger" (click)="delete(actual.idServicio)">Eliminar</button>
+                </td>
+              </tr>
+            </tbody>
+          </table>
         </div>
       </div>
     </div>
   </div>
 </div>
-
