Errores de Daniel

--- a/frontend/src/app/pages/user/list/list.component.html
+++ b/frontend/src/app/pages/user/list/list.component.html
@@ -34,7 +34,7 @@
               <td>{{ i + 1 }}</td>
               <td>{{ user.name }}</td>
               <td>{{ user.email }}</td>
-              <td>{{ user.role_id }}</td>
+              <td>{{ user.role }}</td>
               <td>
                 <button type="button" class="btn btn-primary" (click)="view(user.id)">
                   <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-eye"
